@@ -1,3 +1,7 @@
+2015-12-10  Danil Kutkevich  <danil@kutkevich.org>
+
+        * main.go (main): Attach images to message.
+
 2015-12-08  Danil Kutkevich  <danil@kutkevich.org>
 
         * main.go (main): SMTP investigation.
